Bug 1553537 Part 2 - Port the InetBgDL plugin to Visual Studio 2019. r=agashlin

Depends on D33844

Differential Revision: https://phabricator.services.mozilla.com/D33845

--HG--
extra : moz-landing-system : lando